[metadata]
name = pygbs
version = attr: pygbs._version.__version__
description = GBS bspline library
long_description = Python bindings of GBS bspline library
long_description_content_type = text/markdown
license_file = LICENSE
author = SSG-Aero
url = https://github.com/ssg-aero/gbs.git
platforms = Windows, Linux, Mac OS X
keywords = gbs

[options]
include_package_data = True
packages = find:
python_requires = >=3.7